# forge-adp

./: .gitignore  Dockerfile.agents  Dockerfile.orchestrator  Makefile  README.md  docker-compose.dev.yml  go.mod  go.sum
.claude/: settings.json
cmd/adapters/applitools/: main.go
cmd/adapters/argocd/: main.go
cmd/adapters/atlantis/: main.go
cmd/adapters/aws/: main.go
cmd/adapters/azuredevopsboards/: main.go
cmd/adapters/azuredevopsrepos/: main.go
cmd/adapters/azuremonitor/: main.go
cmd/adapters/backstage/: main.go
cmd/adapters/bitbucket/: main.go
cmd/adapters/browserstack/: main.go
cmd/adapters/checkov/: main.go
cmd/adapters/circleci/: main.go
cmd/adapters/confluence/: main.go
cmd/orchestrator/: main.go
cmd/policy-engine/: main.go
cmd/registry/: main.go
deployments/: PRODUCTION_CHECKLIST.md
deployments/kubernetes/: namespaces.yaml
deployments/opa/: forge.rego
deployments/terraform/: eks.tf  rds.tf
internal/governance/: scheduler.go
internal/orchestrator/: orchestrator.go
internal/policy/: engine.go
internal/registry/: registry.go
pkg/agents/: pyproject.toml
pkg/agents/forge_agents/: __init__.py  architect.py  backend_developer.py  governance.py  pm.py  runner.py  runtime.py
pkg/config/: config.go
pkg/events/: bus.go
pkg/llm/: llm.go
tests/integration/: conftest.py  test_workflow.py
tests/load/: orchestrator.js
tools/mcp-server/: package-lock.json  package.json
tools/seeder/: main.go
tools/tenant-onboard/: main.sh
tools/vscode-extension/: LICENSE  forge-adp-0.1.0.vsix  package.json  tsconfig.json
(+193 files in other folders)
